package com.app.utilities;

public enum PalosEnum {

    ESPADAS, OROS, BASTOS, COPAS;

}

