package com.app.utilities;

public enum ValoresEnum {

    AS, DOS, TRES, CUATRO, CINCO, SEIS, SIETE, SOTA, CABALLO, REY;

}
