@startuml juego_de_cartas

entity Carta {
    - palo: PalosEnum
    - valor: ValoresEnum
    + getValor(): ValoresEnum
    + getPalo(): PalosEnum
    + toString(): String
}

entity Baraja {
    - mazo: List<Carta>
    - cartasAdquiridas: List<Carta>
    - inicializarBaraja(): void
    + barajar(): void
    + mostrarDisponibles(): void
    + siguienteCarta(): Carta
    + adquirirCartas(): List<Carta>
    + mostrarCartasAdquiridas(): void
    + cantidadDeCartasDisponibles(): void
    + getMazo(): List<Carta>
    + getCartasAdquiridas(): List<Carta>
    + setCartasAdquiridas(): void
}

enum PalosEnum {
    +  {static} ESPADAS 
    +  {static} OROS 
    +  {static} BASTOS 
    +  {static} COPAS 
}

enum ValoresEnum {
    +  {static} AS
    +  {static} DOS
    +  {static} TRES
    +  {static} CUATRO
    +  {static} CINCO
    +  {static} SEIS
    +  {static} SIETE
    +  {static} SOTA
    +  {static} CABALLO
    +  {static} REY
}

Carta "1" <--> "1" PalosEnum
Carta "1" <--> "1" ValoresEnum
Baraja "1" --> "0..*" Carta

@enduml